--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/motion": "^2.0.0",
     "aos": "^2.3.4",
     "swiper": "^11.0.5",
     "vue": "^3.3.11",
